# barcode

./: Dockerfile  README.md  bitmap.py  compose.yml  factory.py  generator.py  main.py  options.py  packbits.py  pyproject.toml  requirements.txt
barcodes/: barcode.py  barcode_128c.py  barcode_25.py  barcode_93.py  barcode_codabar.py  barcode_ean13.py  barcode_type.py
compressors/: compressor.py
contracts/: barcode_options.py  output_type.py
devops/: compose.yml
imaging/: bitmap.py
src/: console.py  main.py
src/barcodes/: barcode_128c.py  barcode_39.py  barcode_ean8.py  barcode_upca.py
src/compressors/: compressor_type.py  packbits.py  simple_rle.py
src/contracts/: barcode_options.py
src/factories/: abstract_factory.py  barcode_factory.py  compressor_factory.py
src/services/: generator.py
