[project]
name = "barcode"
version = "0.1.0"
description = "Simple Python project to generate various types of barcode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "pydantic>=2.12.5",
]

[tool.pyright]
useLibraryCodeForTypes = true
